--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="changjoopark.com.flutter_foreground_plugin">
+  package="changjoopark.com.flutter_foreground_plugin"
+          xmlns:tools="http://schemas.android.com/tools">
 
 </manifest>
