--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="changjoopark.com.flutter_foreground_plugin"
-          xmlns:tools="http://schemas.android.com/tools">
+     xmlns:tools="http://schemas.android.com/tools"
+  package="changjoopark.com.flutter_foreground_plugin">
 
 </manifest>
